--- a/root/css/index.css
+++ b/root/css/index.css
@@ -304,8 +304,8 @@ a {
 
     #divideLine {
         color:#747474;
-        margin-right: 1%;
-        margin-left: 1%;
+        margin-right: .5%;
+        margin-left: .5%;
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -343,8 +343,8 @@ a {
 
     h2 {
         display: inline;
-        letter-spacing: 1em;
-        font-size: 2.6vw;
+        letter-spacing: .5em;
+        font-size: 2.8vw;
         white-space: nowrap; 
     }
 
