--- a/root/css/hike.css
+++ b/root/css/hike.css
@@ -107,7 +107,7 @@ ul.sideNav li {
 }
 
 a {
-    color: rgb(179, 179, 179);
+    color: rgb(74, 74, 74);
     text-decoration: none;
     display: inline-block;
 }
@@ -284,7 +284,7 @@ screen and( min-width: 500px) {
     #footer {
 
         bottom: 0;
-        width: 100%
+        width: 100%;
         color: rgb(74, 74, 74);
     }
 }
@@ -339,6 +339,7 @@ a.bottom:hover:before {
 
 .dropdown-content a:hover {
     color: gray;
+    /* check */
 }
 
 .dropdown:hover .dropdown-content {
@@ -848,6 +849,7 @@ th,
         /*style the span tag*/
         height: 2px;
         float: left;
+        
         background-color: rgba(104, 115, 119, 10);
     }
     
