--- a/root/css/hike.css
+++ b/root/css/hike.css
@@ -1,20 +1,12 @@
 body {
-    /* background-color: rgb(9, 9, 9); */
- /* background-color: black; */
- /* background-color:rgb(222, 220, 220); */
- /* background-color:rgb(235, 231, 231); */
- background-color:rgb(242, 242, 242);
- 
+    background-color:rgb(242, 242, 242);
     color: silver;
     margin-top: 2%;
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
 #toLeft{
-    /* display: inline;
-    margin-left: -85px; */
     font-size: 13px;
-
 }
 
 .my-element {
@@ -44,23 +36,15 @@ img {
     display: inline;
 }
 
-#makeGreen {
-    color: rgb(0, 223, 60);
-}
-
-
-
 #hyphenOne {
     color: rgb(47, 47, 47);
     display: inline-block;
 }
 
 #hyphen {
-    /* color: rgb(58, 58, 58); */
     color:rgb(74,74,74);
     display: inline-block;
-    padding: 7px;
-    
+    padding: 7px;  
 }
 
 ul {
@@ -69,9 +53,6 @@ ul {
 
 li {
     display: inline-block;
-    /* text-align: right; */
-    /* text-align: center; */
-    /*  padding-right: 10px;*/
     font-family: magneta, serif;
     font-weight: 400;
     font-style: normal;
@@ -86,8 +67,6 @@ li {
     right: 0;
     -webkit-transform-origin: left top;
     -webkit-transform: rotate(-90deg) translateX(-100%);
-    /* width:100vh;    
-            height:45px; */
     position: fixed;
     background: #4c4c4c;
 }
@@ -121,7 +100,6 @@ a:hover {
 }
 
 h1 {
-    /* text-align: center; */
     font-size: 20px;
     min-height: 10em;
     display: table-cell;
@@ -130,13 +108,7 @@ h1 {
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
-    
 }
-
-
-/* potion for name */
-
-
 
 
 /*End Name*/
@@ -144,12 +116,10 @@ h1 {
 h2 {
     color: rgb(74, 74, 74);
     font-size: 12px;
-    /* letter-spacing: 2px; */
     position: relative;
 }
 
 #underName {
-    /* text-align: center; */
     line-height: 1px;
     position: relative;
     font-family: roboto-slab, serif;
@@ -158,7 +128,6 @@ h2 {
 }
 
 #underNameSub {
-    /* text-align: center; */
     line-height: 1px;
     position: relative;
     font-family: roboto-slab, serif;
@@ -234,7 +203,7 @@ a {
         top: 90%;
     }
     body {
-        margin-left: 10px;
+        margin-left: 5px;
         margin-bottom: 2px;
     }
     #footer {
@@ -251,43 +220,19 @@ a {
     p {
         color: rgb(217, 217, 217);
     }
-}
-
-@media (min-width: 500px),
-screen and( min-width: 500px) {
-    h1 {
-        white-space: nowrap;
-    }
-    .menu-wrap .menu {
-        
-        position: fixed;
-        top: 20;
-        left: 30%;
-        width: 80%;
-        height: 14%;
-        visibility: hidden;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    h2 {
-        display: inline;
-        letter-spacing: 7px;
-    }
-    #divideLine {
-        /*   color:rgb(179, 179, 179);*/
-        color: rgb(85, 85, 85);
-        margin-right: 1%;
-        margin-left: 1%;
-    }
-    #footer {
-
-        bottom: 0;
-        width: 100%;
-        color: rgb(74, 74, 74);
+    #bioBody {
+        font-family: jubilat,serif;
+    font-weight: 200;
+    font-style: normal;
+    letter-spacing: 2px;
+        font-size: 13px;
+        line-height: 24px;
+        text-align: left;
+        width: 100vw;
+        color:#747474;
     }
 }
+
 
 
 a.bottom {
@@ -330,8 +275,6 @@ a.bottom:hover:before {
 
 .dropdown-content a {
     float: none;
-    /*  color: white;*/
-    /*    padding: 10px 13px;*/
     text-decoration: none;
     display: block;
     text-align: left;
@@ -347,8 +290,6 @@ a.bottom:hover:before {
 }
 
 :root {
-    /*  --overlay-color: rgba(7, 47, 47, .88);*/
-    /* --overlay-color: rgba(0, 0, 0, .80);*/
     --menu-speed: 0.75s;
 }
 
@@ -358,6 +299,20 @@ a.bottom:hover:before {
     font-weight: 400;
     font-style: normal;
 }
+    .menu-wrap .menu {
+        
+        position: fixed;
+        /* top: 20px; */
+        left: 30%;
+        width: 80%;
+        height: 14%;
+        visibility: hidden;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
 
 .btn {
     display: inline-block;
@@ -389,7 +344,6 @@ a.bottom:hover:before {
 /* MENU STYLES */
 
 .menu-wrap {
-    /*  position: fixed;*/
     top: 0;
     position: relative;
     float: right;
@@ -431,7 +385,6 @@ a.bottom:hover:before {
     width: 20%;
     height: 1.5px;
     background: rgb(179, 179, 179);
-    /*  background: #fff;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -527,7 +480,6 @@ a.bottom:hover:before {
 }
 
 #menuLinks {
-    /*font size for toggled menu links*/
     font-size: 20px;
     padding-bottom: 20px;
 }
@@ -544,7 +496,6 @@ a.bottom:hover:before {
     list-style: none;
     color: #fff;
     font-size: 1.rem;
-    /*  padding: .75rem;*/
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -559,14 +510,12 @@ a.bottom:hover:before {
 
 
 #myPic {
-    /* width: 20%; */
     height: 400px;
     position: absolute;
     opacity: 60%;
-    /* z-index: 1000; */
     text-align: left;
     margin-left: 65%;
-    margin-top: 18%/* margin: 15%; */
+    margin-top: 18%;
 }
 
 #underName {
@@ -594,7 +543,6 @@ hr{
 }
 
 #underNameSub {
-    /* padding-top: 10%; */
     letter-spacing: 3px;
     font-family: rubik, sans-serif;
     font-weight: 400;
@@ -607,10 +555,7 @@ hr{
 }
 #underNameSub {
     font-size: 20px;
-    /* padding-top: 23%; */
-    /* color: rgb(217, 217, 217); */
     color: rgba(104, 115, 119, 10);
-
 }
 
 #margined {
@@ -625,25 +570,14 @@ hr{
 }
 
 #bioBody {
-    /* font-family: roboto-slab, serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: left;
-    width: 65%;
-    color: rgba(104, 115, 119, 10); */
     font-family: jubilat,serif;
-font-weight: 200;
-font-style: normal;
-letter-spacing: 2px;
+    font-weight: 200;
+    font-style: normal;
+    letter-spacing: 2px;
     font-size: 13px;
     line-height: 24px;
     text-align: left;
     width: 45vw;
-    /* color: rgb(74, 74, 74); */
-    /* color: rgba(104, 115, 119, 10); */
-
     color:#747474;
 }
 
@@ -652,12 +586,9 @@ button {
     color: inherit;
     border: none;
     padding: 0;
-    /* font: inherit; */
     cursor: pointer;
-    /* outline: inherit; */
 }
 
-  /* collabsible */
     
   details {
     user-select: none;
@@ -677,9 +608,6 @@ details[open] summary span.icon {
 
 summary {
     display: flex;
-    cursor: pointer;
-    /* display: inline-block; */
-    /* transform: rotate(180deg); */
 }
 
 summary::-webkit-details-marker {
@@ -689,7 +617,6 @@ summary::-webkit-details-marker {
 #expandResume {
     font-size: 15px;
     width: 100px;
-    /* padding: 8px; */
     padding-top: 10px;
     padding-bottom: 3%;
     padding-top:1%;
@@ -701,15 +628,11 @@ summary::-webkit-details-marker {
 
 #topRow{
 
-    /* color: white; */
     color: rgb(121, 121, 121);
 }
 
 th,
     td {
-        /* padding-right: 20px;
-        padding-bottom: 20px;
-        text-align: left; */
         border: 0;
         border-left: none;
         border-collapse: collapse;
@@ -717,9 +640,7 @@ th,
         font-size: 15px;
     }
     #generalTable{
-            padding-right: 200px;
-
-            
+            padding-right: 200px; 
             vertical-align: center;
             text-align: left;
             border: 0;
@@ -734,37 +655,28 @@ th,
     
     table {
         border-collapse: collapse;
-        /* color: white; */
         color: rgba(104, 115, 119, 10);
         font-size: 12px;
         letter-spacing: 1px;
-text-align: center;
-vertical-align: middle;
-        /* margin: 3%; */
+        text-align: center;
+        vertical-align: middle;
     }
     
     
     tr {
-        /* border-bottom:1px solid rgb(58, 58, 58); */
         padding: 15px;
         line-height: 30px;
-
     }
     
     td {
-        /* font-size: 15px; */
         vertical-align: top;
     }
     #makeInline{
-        /* display: inline-block; */
-        /* text-align: left; */
         vertical-align: inherit
-
     }
     summary {
         font-size: 25px;
         color: rgb(121, 121, 121);
-        /* padding-top: 5%; */
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -773,7 +685,6 @@ vertical-align: middle;
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
-    /* color: white; */
     color: rgb(121, 121, 121);
 }
     #miniHeader {
@@ -782,17 +693,11 @@ vertical-align: middle;
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
-        /* font-family: magneta, serif;
-        font-weight: 400;
-        font-style: normal; */
     }
     
     #miniHeader2 {
         color: rgba(104, 115, 119, 10);
         font-size: 15px;
-        /* font-family: rubik, sans-serif;
-        font-weight: 400;
-        font-style: normal; */
         font-family: magneta, serif;
         font-weight: 400;
         font-style: normal;
@@ -801,32 +706,25 @@ vertical-align: middle;
     h3 {
         display: inline;
         text-align: left;
-
     }
 
 
     /* skill */
     
     li {
-        /*style the li tag*/
         list-style-type: none;
         font-family: sans-serif;
-        /* letter-spacing: 1px; */
         font-family: rubik, sans-serif;
         font-size: 12px;
         font-weight: 400;
-        /* text-align: left; */
     }
     
     .skills {
-        /*style the text*/
         width: 500px;
-        /* margin: 5%; */
         color: #fff;
     }
     
     .skills li {
-        /*set margin of li*/
         margin: 20px 0;
     }
     
@@ -913,25 +811,15 @@ vertical-align: middle;
             width: 30%;
         }
     }
-    /* skill end */
-
-
-
-
-
-
 
      /* back to top */
     
      .back-to-top-link {
         color: white;
-        /* font-size: 2rem; */
-        /* padding-top: 2%; */
         letter-spacing: 3px;
         font-family: magneta, serif;
         font-weight: 400;
         font-style: normal;
-        /* position: relative; */
         font-size: 13px;
         display: table;
         text-align: center;
@@ -939,11 +827,7 @@ vertical-align: middle;
         margin-right: auto;
         padding-bottom: 15px;
     }
-    /* .back-to-top-wrapper {
-    position: absolute;
-    top: $scrollLength;
-    rigt: .25rem;
-} */
+ 
     
     @media screen and (prefers-reduced-motion: no-preference) {
         html {
@@ -954,10 +838,6 @@ vertical-align: middle;
     html {
         scroll-behavior: smooth;
     }
-    /* back to top end */
-    /* add num to skillbar */
-    /* end add num to skill bar */
-    /* end add num to skill bar */
     
     html,
     body {
@@ -971,82 +851,8 @@ vertical-align: middle;
         font-style: normal;
         line-height: 25px;
         display: inline-block;
-        /* display: inline; */
         text-align: right;
         margin-left: 60%;
-    }
-
-
-    #javaPercent {
-        margin-left: 60%;
-    }
-    
-    #cPercent {
-        margin-left: 40%;
-    }
-    
-    #pythonPercent {
-        margin-left: 30%;
-    }
-    
-    #reactPercent {
-        margin-left: 20%;
-    }
-    
-    #htmlPercent {
-        margin-left: 10%;
-    }
-    
-    #jsPercent {
-        margin-left: 30%;
-    }
-    
-    #phpPercent {
-        margin-left: 80%;
-    }
-    
-    #aePercent {
-        margin-left: 90%;
-    }
-    
-    #aePercent {
-        margin-left: 70%;
-    }
-    
-    #ccPercent {
-        margin-left: 99%;
-    }
-    
-    #unityPercent {
-        margin-left: 50%;
-    }
-    
-    #mayaPercent {
-        margin-left: 40%;
-    }
-    
-    #figmaPercent {
-        margin-left: 30%;
-    }
-    
-    #figmaPercent {
-        margin-left: 20%;
-    }
-    
-    #houdiniPercent {
-        margin-left: 10%;
-    }
-    
-    #webglPercent {
-        margin-left: 10%;
-    }
-    
-    #glsl {
-        margin-left: 10%;
-    }
-    
-    #ctt {
-        margin-left: 10%;
     }
     
     #sectionHead {
@@ -1060,38 +866,30 @@ vertical-align: middle;
         margin-left: 3%;
     }
     li {
-        /*style the li tag*/
         list-style-type: none;
         font-family: sans-serif;
         letter-spacing: 1px;
         font-family: rubik, sans-serif;
         font-size: 12px;
         font-weight: 400;
-        /* text-align: left; */
     }
     
     #makeWhite {
         color: rgba(104, 115, 119, 10);
         font-family: roboto-slab, serif;
         font-weight: 300;
-        /* font-style: normal; */
         font-size: 14px;
     }
     
     #makeWhite2 {
         color: white;
         font-size: 13px;
-        /* padding-top: 5%; */
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
         line-height: 1.9em;
     }
 
-
-/* table{
-    width: 70%;
-} */
     th,
     td {
         padding-right: 20px;
@@ -1103,3 +901,38 @@ vertical-align: middle;
         font-size: 14px;
     }
     
+@media (max-width: 500px){
+    h1 {
+        white-space: nowrap;
+    }
+
+    h2 {
+        display: inline;
+        letter-spacing: 7px;
+    }
+    #divideLine {
+        color: rgb(85, 85, 85);
+        margin-right: 1%;
+        margin-left: 1%;
+    }
+    #footer {
+
+        bottom: 0;
+        width: 100%;
+        color: rgb(74, 74, 74);
+    }
+    #bioBody {
+        font-family: jubilat,serif;
+    font-weight: 200;
+    font-style: normal;
+    letter-spacing: 2px;
+        font-size: 13px;
+        line-height: 24px;
+        text-align: left;
+        width: 75vw;
+        margin-left: 10px;
+        color:#747474;
+    }
+
+    #contentImage{  width: 80vw;}
+}
