--- a/root/homeThreeJS/src/style.css
+++ b/root/homeThreeJS/src/style.css
@@ -18,48 +18,18 @@ body
     outline: none;
 }
 
-.loading-bar
-{
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 2px;
-    background: #ffffff;
-    transform: scaleX(0.3);
-    transform-origin: top left;
-    transition: transform 0.5s;
-}
-
-.loading-bar.ended
-{
-    transform: scaleX(0);
-    transform-origin: 100% 0;
-    transition: transform 1.5s ease-in-out;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-}
-
-html,
-body
-{
-    overflow: hidden;
-}
-
 /* load bar */
 .loading-bar
 {
     position: absolute;
-    top: 10%;
+    top: 15%;
     width: 100%;
     height: 3px;
     background: #8f8f8f;
     transform: scaleX(0);
     transform-origin: top right;
     transition: transform 0.5s;
-    /* will-change: transform; */
+    will-change: transform;
 }
 
 
@@ -333,7 +303,7 @@ a {
     }
 
     body {
-        margin-left: 10px;
+        /* margin-left: 10px; */
         margin-bottom: 2px;
     }
 
@@ -680,12 +650,12 @@ a.bottom:hover:before {
     transition: color 0.4s ease;
 }
 
-#margined {
+/* #margined {
     margin-left: 15%;
     margin-right: 15%;
-}
+} */
 
-body{
+/* body{
     overflow: hidden;
     white-space: nowrap;
-} 
+}  */
