--- a/root/homeThreeJS/src/style.css
+++ b/root/homeThreeJS/src/style.css
@@ -650,12 +650,12 @@ a.bottom:hover:before {
     transition: color 0.4s ease;
 }
 
-/* #margined {
+#margined {
     margin-left: 15%;
     margin-right: 15%;
-} */
+}
 
-/* body{
+ body{
     overflow: hidden;
     white-space: nowrap;
-}  */
+}  
